# aegis

./: .dockerignore  .gitignore  Dockerfile  README.md  openenv.yaml  pyproject.toml  requirements.txt
docker/: Dockerfile  demo.py
docs/: hackathon_slide_deck.md  hackathon_submission.md
environment/: __init__.py  mcp_server.py  registry.py  runtime.py
environment/attacks/: __init__.py  account_takeover.py  base.py  cicd_poisoning.py  dead_drop_hijack.py  dependency_confusion.py  long_con.py  metadata_injection.py  star_jacking.py  typosquatting.py
environment/models/: __init__.py  attack.py  episode.py  maintainer.py  package.py
environment/tools/: __init__.py  _helpers.py  dependencies.py  diff.py  install_script.py  maintainer.py  reputation.py  sandbox.py  verdict.py
environment/world/: __init__.py  graph.py  package_factory.py  personas.py
eval/: __init__.py  cli.py  compare.py  hackathon.py  plot.py  plotting.py  runner.py
notebooks/: aegis_grpo_colab.ipynb
reports/hackathon/: base_tinygpt2_report.json  base_tinygpt2_summary.json  base_vs_sft_smoke.json  compare_stdout.txt  comparison.json  hackathon_stdout.json  heuristic_report.json  heuristic_stdout.json  heuristic_summary.json  heuristic_vs_trained.json  random_report.json  random_stdout.json  random_summary.json  random_vs_heuristic.json  random_vs_trained.json  random_vs_trained_stdout.json  submission_summary.json  trained_report.json  trained_summary.json
reports/sft_smoke/: trained_report.json  training_log_history.json  (+2 more)
rewards/: __init__.py  rubrics.py  scoring.py
training/: __init__.py  baseline.py  classifier_policy.py  curriculum.py  dataset.py  env_client.py  grpo.py  grpo_env.py  model_policy.py  parsing.py  prompting.py  reporting.py  rollout.py  stack.py  train.py  types.py
(+9 files in other folders)
