[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-env"
version = "0.1.0"
description = "Stateful supply-chain forensic training environment"
requires-python = ">=3.10"
dependencies = [
  "networkx>=3.3,<4.0",
  "faker>=25.8,<26.0",
  "pydantic>=2.11,<3.0",
]

[project.optional-dependencies]
server = ["mcp>=1.0,<2.0"]
training = [
  "trl>=0.11,<1.0",
  "unsloth>=2024.10",
  "wandb>=0.17,<1.0",
  "transformers>=4.44,<5.0",
  "torch>=2.4,<3.0",
]
eval = ["matplotlib>=3.9,<4.0"]

[tool.setuptools.packages.find]
include = ["environment*", "training*", "rewards*", "eval*"]
