[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-env"
version = "0.1.0"
description = "Stateful supply-chain forensic training environment"
requires-python = ">=3.10"
dependencies = [
  "networkx>=3.3,<4.0",
  "faker>=25.8,<26.0",
  "pydantic>=2.11,<3.0",
]

[project.scripts]
aegis-env-mcp = "environment.mcp_server:main"
aegis-env-baseline = "training.baseline:main"
aegis-env-train = "training.train:main"
aegis-env-eval = "eval.cli:main"
aegis-env-compare = "eval.compare:main"

[project.optional-dependencies]
server = ["mcp>=1.0,<2.0"]
training = [
  "trl>=1.2,<2.0",
  "wandb>=0.17,<1.0",
  "transformers>=5.2,<6.0",
  "torch>=2.4,<3.0",
  "datasets>=2.20,<4.0",
  "accelerate>=1.0,<2.0",
  "jmespath>=1.0,<2.0",
  "matplotlib>=3.9,<4.0",
]
eval = [
  "matplotlib>=3.9,<4.0",
  "wandb>=0.17,<1.0",
]
demo = ["gradio>=5.29,<6.0"]
unsloth = ["unsloth>=2024.10"]

[tool.setuptools.packages.find]
include = ["environment*", "training*", "rewards*", "eval*"]
